# se2

./: .gitignore  Cargo.toml  README.md  cross.sh  cross_rpi.sh
assets/: background.glslf  default.glslf  default.glslv
cross_compiling/: Dockerfile
deb_cross/: libasound2-dev_1.1.3-5+rpi3_armhf.deb  libasound2_1.1.3-5+rpi3_armhf.deb  libasyncns-dev_0.8-6_armhf.deb  libbsd-dev_0.8.3-1_armhf.deb  libbsd0_0.8.3-1_armhf.deb  libcap-dev_1%3a2.25-1_armhf.deb  libcap2_1%3a2.25-1_armhf.deb  libdbus-1-3_1.10.26-0+deb9u1_armhf.deb  libdbus-1-dev_1.10.26-0+deb9u1_armhf.deb  libffi-dev_3.2.1-6_armhf.deb  libffi6_3.2.1-6_armhf.deb  libflac-dev_1.3.2-1_armhf.deb  libfreetype6_2.6.3-3.2_armhf.deb  libgcrypt20-dev_1.7.6-2+deb9u3_armhf.deb  libgcrypt20_1.7.6-2+deb9u3_armhf.deb  libgpg-error-dev_1.26-2_armhf.deb  libgpg-error0_1.26-2_armhf.deb  libice-dev_2%3a1.0.9-2_armhf.deb  liblz4-1_0.0~r131-2_armhf.deb  liblz4-dev_0.0~r131-2_armhf.deb  liblzma-dev_5.2.2-1.2_armhf.deb  liblzma5_5.2.2-1.2_armhf.deb  libogg-dev_1.3.2-1_armhf.deb  libpcre3-dev_2%3a8.39-3_armhf.deb  libpcre3_2%3a8.39-3_armhf.deb  libpng-dev_1.6.28-1_armhf.deb  libpng16-16_1.6.28-1_armhf.deb  libsdl2-2.0-0_2.0.5+dfsg1-2_armhf.deb  libsdl2-dev_2.0.5+dfsg1-2_armhf.deb  libselinux1-dev_2.6-3_armhf.deb  libselinux1_2.6-3_armhf.deb  libsm-dev_2%3a1.2.2-1+b1_armhf.deb  libsndfile1-dev_1.0.27-3_armhf.deb  libsndio-dev_1.1.0-3_armhf.deb  libssl1.0-dev_1.0.2l-2+deb9u3_armhf.deb  libsystemd-dev_232-25+deb9u6_armhf.deb  libsystemd0_232-25+deb9u6_armhf.deb  libuuid1_2.29.2-1+deb9u1_armhf.deb  libvorbis-dev_1.3.5-4+deb9u2_armhf.deb  (+31 more)
(+39 files in other folders)
