[package]
name = "se_2"
version = "0.1.0"
authors = ["Nicolas Brüggemann <nbrueggemann@itcoops.de>"]

[dependencies]
log = "0.4"
#pistoncore-input = "*"

find_folder = "0.3.0"
image = "0.19.0"
imageproc = "*"
#piston2d-drag_controller = "0.22.0"
gfx = "0.17.1"
#freetype-rs = "0.19"
#gfx_text = "*"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
#camera_controllers = "0.24.0"
rand = "0.5.0"
shader_version = "0.3.0"
#nalgebra = "0.16"

piston-gfx_texture = "0.34.0"
url = "*"
reqwest = "*"
tempdir = "*"


[dependencies.piston_window]
#version = "*"
path = "piston_window"
default-features = false
#features = ["glutin"]
features = ["sdl2"]


[features]
#ffmpeg_rpi_zero_special=["ffmpeg/ffmpeg_rpi_zero_special"]
ffmpeg_rpi_zero_special=[]
#[dependencies.ffmpeg]
#path = "rust-ffmpeg"
#default-features = false
#features = ["image", "codec", "format", "software-scaling", "software-resampling"]